syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (User);
  rpc GetPotentialMatches (MatchCriteria) returns (PotentialMatches);
  rpc UpdateUserPreferences (UpdatePreferencesRequest) returns (User);
}

message User {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string gender = 4;
  repeated string interests = 5;
  UserPreferences preferences = 6;
}

message UserPreferences {
  int32 minAge = 1;
  int32 maxAge = 2;
  string genderPreference = 3;
  repeated string interestPreferences = 4;
}

message GetUserRequest {
  string userId = 1;
}

message MatchCriteria {
  string userId = 1;
}

message PotentialMatches {
  repeated User users = 1;
}

message UpdatePreferencesRequest {
  string userId = 1;
  UserPreferences preferences = 2;
}
